Fix typo in variable name: netTotalWithOutCod to netTotalWithoutCod
